オリジナルノードへのへのジャンプ機能を実装