@@ -6,7 +6,18 @@
  * User Manual available at https://docs.gradle.org/5.2.1/userguide/tutorial_java_projects.html
  */
 
+//============================= How to Compile =============================
+// cd directory-this-file-is-in
+// ./gradlew prepareJFX       # if not use Liberica JDK, excute this
+// ./gradlew prepareLibs      # prepare the libraries BunnyHop uses
+// ./gradlew runApp           # execute BunnyHop
+// ./gradlew jlink            # generates a custom Java runtime image
+// ./gradlew runSelfContained # execute BunnyHop on the custom Java runtime image
+//==========================================================================
+
 import org.apache.tools.ant.taskdefs.condition.Os
+import java.util.regex.*
+import java.nio.file.*
 
 plugins {
 	// Apply the java plugin to add support for Java
@@ -19,8 +30,6 @@ plugins {
 }
 
 repositories {
-	// Use jcenter for resolving your dependencies.
-	// You can declare any Maven/Ivy/file repository here.
 	jcenter()
 	mavenCentral()
 }
@@ -28,7 +37,9 @@ repositories {
 dependencies {
 	compile group: 'com.jcraft', name: 'jsch', version: '0.1.55'
 	compile group: 'com.jcraft', name: 'jzlib', version: '1.1.3'
-	compile group: 'org.mozilla', name: 'rhino', version: '1.7.10'
+	compile group: 'org.mozilla', name: 'rhino', version: '1.7.11'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
 }
 
 ext.moduleName = 'net.seapanda.bunnyhop'
@@ -38,13 +49,16 @@ ext.USR_HOME = System.getProperty('user.home')
 ext.JDK_VER = 11
 ext.appDirName = 'App';
 ext.ps = File.pathSeparator
+ext.fs = File.separator
 ext.projName = 'BunnyHop'
+ext.jfxLib = 'jfxLib'
+ext.jfxMlib = 'jfxMlib'
 
 // JFXライブラリの展開と配置
 task prepareJFX {
 
-	def jfxJarZipPath = "$projectDir/lib/jfx.zip"
-	def jfxModZipPath = "$projectDir/mlib/jfx.zip"
+	def jfxJarZipPath = "$projectDir/$jfxLib/jfx.zip"
+	def jfxModZipPath = "$projectDir/$jfxMlib/jfx.zip"
 
 	doFirst {
 		if (Os.isFamily(Os.FAMILY_WINDOWS)) {
@@ -78,20 +92,20 @@ task prepareJFX {
 		//解凍
 		copy {
 			from zipTree(jfxJarZipPath)
-			into file("$projectDir/lib")
+			into file("$projectDir/$jfxLib")
 		}
 
 		copy {
 			from zipTree(jfxModZipPath)
-			into file("$projectDir/mlib")
+			into file("$projectDir/$jfxMlib")
 		}
 
 		// 必要なファイルの配置
-		FileTree ftree = fileTree("$projectDir/lib")
+		FileTree ftree = fileTree("$projectDir/$jfxLib")
 		ftree.visit {element ->
 			if (element.file.toString() ==~ /.+javafx.+[\/\\]lib[\/\\].+\.jar$/ ||
 				element.file.toString() ==~ /.+javafx.+[\/\\]lib[\/\\].+\.so$/) {
-				ant.move(todir: "$projectDir/lib") {
+				ant.move(todir: "$projectDir/$jfxLib") {
 					fileset(file: element.file.toString())
 				}
 			}
@@ -102,10 +116,10 @@ task prepareJFX {
 			}
 		}
 
-		ftree = fileTree("$projectDir/mlib")
+		ftree = fileTree("$projectDir/$jfxMlib")
 		ftree.visit {element ->
 			if (element.file.toString() ==~ /.+\.jmod$/) {
-				ant.move(todir: "$projectDir/mlib") {
+				ant.move(todir: "$projectDir/$jfxMlib") {
 					fileset(file: element.file.toString())
 				}
 			}
@@ -113,138 +127,75 @@ task prepareJFX {
 	}
 }
 
-// JSchライブラリの配置
-task prepareJSch {
+
+/**
+ * JARライブラリからモジュールを作成する
+ * @param libFilePath Modular JAR にしたい JAR ファイルのパス
+ */
+def createModFromJar(libFilePath) {
 	
-	doFirst {
-		String jschModName = 'jsch'
-		String jschModJar = 'jschMod.jar'
-		String jschLibJar = null
-		String jzlibModName = 'jzlib'
-		String jzlibModJar = 'jzlibMod.jar'
-		String jzlibLibJar = null
+	def libFileName = Paths.get(libFilePath).getFileName()
+	println libFileName
+	def modFileName = libFileName
+	
+	// モジュールファイルが存在する場合は実行しない
+	if (!file("$projectDir/mlib/$modFileName").exists()) {
 
-		// jzlibモジュール作成
-		if (!file("$projectDir/lib/$jzlibModJar").exists()) {
-
-			files(configurations.default).each {File file ->
-
-				if (file.name ==~ /^jzlib.+\.jar$/) {
-					ant.copy(todir: "$projectDir/lib") {
-						fileset(file: file.absolutePath)
-					}
-					jzlibLibJar = file.name
-				}
-			}
-
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jdeps'),
-							'--generate-module-info', "$projectDir/lib", "$projectDir/lib/$jzlibLibJar")
-			}
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/javac'),
-							'--patch-module', "$jzlibModName=$projectDir/lib/$jzlibLibJar", "$projectDir/lib/$jzlibModName/module-info.java")
-			}
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jar'),
-							 'uf', "$projectDir/lib/$jzlibLibJar", '-C', "$projectDir/lib/$jzlibModName", 'module-info.class')
-			}
-			ant.move(tofile: "$projectDir/lib/$jzlibModJar") {
-				fileset(file: "$projectDir/lib/$jzlibLibJar")
-			}
-			ant.copy(tofile: "$projectDir/mlib/$jzlibModJar") {
-				fileset(file: "$projectDir/lib/$jzlibModJar")
-			}
-			delete "$projectDir/lib/$jzlibModName"
+		def output = new ByteArrayOutputStream()
+		exec {
+			commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jdeps'),
+						'--module-path', "$projectDir/lib",
+						'--generate-module-info', "$projectDir/lib/moduleInfo", "$libFilePath")
+			standardOutput = output
+		}
+		
+		// [writing to PATH/モジュール名/module-info.java] と出力される行からモジュール名を抜き出す
+		def line = (output.toString() =~ /^.+module-info.java/)[0]
+		def modName = line.split(Pattern.quote(fs))[-2]
+		
+		exec {
+			commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/javac'),
+						'--patch-module', "$modName=$libFilePath",
+						'--module-path', "$projectDir/lib",
+						"$projectDir/lib/moduleInfo/$modName/module-info.java")
+		}
+		ant.copy(tofile: "$projectDir/mlib/$modFileName") {
+			fileset(file: "$libFilePath")
+		}
+		exec {
+			commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jar'),
+						 'uf', "$projectDir/mlib/$modFileName", '-C', "$projectDir/lib/moduleInfo/$modName", 'module-info.class')
 		}
 
-		// jschモジュール作成
-		if (!file("$projectDir/lib/$jschModJar").exists()) {
-
-			files(configurations.default).each {File file ->
-				if (file.name ==~ /^jsch.+\.jar$/) {
-					ant.copy(todir: "$projectDir/lib") {
-						fileset(file: file.absolutePath)
-					}
-					jschLibJar = file.name
-				}
-			}
-
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jdeps'),
-							'--module-path', "$projectDir/lib/$jzlibModJar",
-							'--add-modules', "$jzlibModName",
-							'--generate-module-info', "$projectDir/lib", "$projectDir/lib/$jschLibJar")
-			}
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/javac'),
-							'--module-path', "$projectDir/lib/$jzlibModJar",
-							'--patch-module', "$jschModName=$projectDir/lib/$jschLibJar", "$projectDir/lib/$jschModName/module-info.java")
-			}
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jar'),
-							 'uf', "$projectDir/lib/$jschLibJar", '-C', "$projectDir/lib/$jschModName", 'module-info.class')
-			}
-			ant.move(tofile: "$projectDir/lib/$jschModJar") {
-				fileset(file: "$projectDir/lib/$jschLibJar")
-			}
-			ant.copy(tofile: "$projectDir/mlib/$jschModJar") {
-				fileset(file: "$projectDir/lib/$jschModJar")
-			}
-			delete "$projectDir/lib/$jschModName"
-		}
+		delete "$projectDir/lib/moduleInfo/$modName"
 	}
 }
 
-// Rhinoライブラリの配置
-task prepareRhino {
+task copyDependencies(type: Copy) {
 
+	from configurations.default
+	into 'lib'
+	
 	doFirst {
-		String rhinoModName = 'rhino'
-		String rhinoModJar = 'rhinoMod.jar'
-		String rhinoLibJar = null
-		
-		// rhinoモジュール作成
-		if (!file("$projectDir/lib/$rhinoModJar").exists()) {
-
-			files(configurations.default).each {File file ->
-
-				if (file.name ==~ /^rhino.+\.jar$/) {
-					ant.copy(todir: "$projectDir/lib") {
-						fileset(file: file.absolutePath)
-					}
-					rhinoLibJar = file.name
-				}
-			}
-
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jdeps'),
-							'--generate-module-info', "$projectDir/lib", "$projectDir/lib/$rhinoLibJar")
-			}
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/javac'),
-							'--patch-module', "$rhinoModName=$projectDir/lib/$rhinoLibJar", "$projectDir/lib/$rhinoModName/module-info.java")
-			}
-			exec {
-				commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jar'),
-							 'uf', "$projectDir/lib/$rhinoLibJar", '-C', "$projectDir/lib/$rhinoModName", 'module-info.class')
-			}
-			ant.move(tofile: "$projectDir/lib/$rhinoModJar") {
-				fileset(file: "$projectDir/lib/$rhinoLibJar")
-			}
-			ant.copy(tofile: "$projectDir/mlib/$rhinoModJar") {
-				fileset(file: "$projectDir/lib/$rhinoModJar")
-			}
-			delete "$projectDir/lib/$rhinoModName"
-		}
+		delete "$projectDir/lib/"
+		delete "$projectDir/mlib/"
 	}
 }
 
 // ライブラリの準備
 task prepareLibs {
-	dependsOn 'prepareJFX'
-	dependsOn 'prepareJSch'
-	dependsOn 'prepareRhino'
+
+	dependsOn 'copyDependencies'
+	
+	doFirst {
+		FileTree ftree = fileTree("$projectDir/lib")
+		ftree.visit {element ->
+			def filePath = element.file.toString()
+			if (filePath ==~ /.+\.jar$/) {
+				createModFromJar(filePath)
+			}
+		}
+	}
 }
 
 compileJava {
@@ -257,7 +208,7 @@ compileJava {
 			'-source', JDK_VER,
 			'-target', JDK_VER,
 			'-encoding', 'UTF8',
-			'--module-path', "$projectDir/lib",
+			'--module-path', ("$projectDir/mlib" + ps + "$projectDir/$jfxLib"),
 		]
 		classpath = files()
 	}
@@ -283,7 +234,7 @@ task runApp(type: JavaExec) {
 		executable = USR_HOME + '/java/' + JDK_VER + '/jdk/bin/java'
 		main = ''
 		jvmArgs = [
-			'--module-path', ("$projectDir/lib" + ps + "$projectDir/$appDirName"),
+			'--module-path', ("$projectDir/mlib" + ps + "$projectDir/$jfxLib" + ps + "$projectDir/$appDirName"),
 			'--module', "$moduleName/$mainClass",
 		]
 		classpath = files()
@@ -294,23 +245,27 @@ task jlink() {
 
 	dependsOn 'createModJar'
 	doFirst {
-
+	
 		def requiredModNames = new ByteArrayOutputStream()
 		exec {
 			commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jdeps'),
 						'--print-module-deps',
-						'--module-path', ("$projectDir/lib" + ps + "$projectDir/$appDirName"),
+						'--module-path', ("$projectDir/mlib" + ps + "$projectDir/$jfxLib" + ps + "$projectDir/$appDirName"),
 						'--add-modules', "$moduleName,$bhProgramExecModName")
 
 			standardOutput = requiredModNames
 		}
-
+		// println requiredModNames.toString()
+		
+		// カスタムJRE作成
 		exec {
 			delete "$projectDir/$projName"
 			commandLine ((USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jlink'),
-						'--module-path', (USR_HOME + '/java/' +  JDK_VER + '/jdk/jmods'),
-						'--module-path', "$projectDir/mlib",
+						'--module-path', ((USR_HOME + '/java/' +  JDK_VER + '/jdk/jmods') + ps + 
+										  "$projectDir/$jfxMlib" + ps + 
+										  "$projectDir/mlib"),
 						'--add-modules', requiredModNames.toString().trim(),
+						//'--compress=2',
 						'--output', "$projectDir/$projName")
 		}
 	}
